This time we brought the militars, the changelog police was not enough...

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,11 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Add a new line at the end of m4/compiler.m4 file, to cope with an
     autoreconf failure due to the new m4 1.4.7.
 
+  [ Nicolas François ]
+  * Specify --null before the -T tar's option to avoid the "tar: -: file name
+    read contains nul character" warning.
+    Closes: #376351, #375749, #376724, #377279
+
   [ Added dpkg Translations ]
   * Dzongkha (Kinley Tshering)
 
@@ -20,10 +25,10 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Dutch (Bart Cornelis).
   * Galician (Jacobo Tarrio).
   * Hungarian (SZERVÁC Attila).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * French (Frédéric Bothamy).
   * Vietnamese (Clytie Siddall). Closes: #383588
-  * Dansk (Claus Hindsgaul).
+  * Danish (Claus Hindsgaul).
   * Khmer (Khoem Sokhem). Closes: #375099
   * Basque (Piarres Beobide). Closes: #375118
   * Russian (Yuri Kozlov). Closes: #376746
@@ -33,69 +38,32 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Japanese (Kenshi Muto). Closes: #386963
   * Slovak (Peter Mann). Closes: #387282
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
-  * Italian (Typo) (Davide Viti). Closes: #387821
+  * Italian (Stefano Canepa, Davide Viti). Closes: #387821
   * Dzongkha (Tenzin Dendup). Closes: #388192
-  * Khmer (Khoem Sokhem). Closes: #375099
+
+  [ Added dpkg-dev Translations ]
+  * French (Philippe Batailler).
 
   [ Updated dselect Translations ]
   * Catalan (Robert Millan).
   * German (Sven Joachim). Closes: #384843
-    (Sven is now the new German translation maintainer for dpkg and dselect.)
+    (Sven is now the new German translation maintainer for dpkg and dselect).
   * Danish (Claus Hindsgaul).
   * Hungarian (SZERVÁC Attila).
-=======
   * Spanish (Javier Fernández-Sanguino Peña).
   * Slovak (Peter Mann).
 
   [ Updated man pages translations ]
+  * French (Philippe Batailler).
   * German (Helge Kreutzmann). Closes: #379030
-    - start-stop-daemon.8.
-    - update-alternatives.8.
 
   [ Added man pages translations ]
-  * German (Helge Kreutzmann):
-    - dpkg.cfg.5. Closes: #379286
-    - dselect.cfg.5. Closes: #379298
-    - 822-date.1. Closes: #379417
-    - deb-old.5. Closes: #379433
-    - deb.5: Closes: #379661
-    - dpkg-checkbuilddeps.1: Closes: #379798
-    - dpkg-scanpackages.1: Closes: #379825
-    - dpkg-scansources.1: Closes: #379985
-    - cleanup-info.8: Closes: #380130
-    - dpkg-name.1: Closes: #380239
-    - dpkg-statoverride.8: Closes: #380365
-    - dpkg.1. Closes: #381047
-    - dpkg-divert.8. CLoses: #380660
-    - deb-control.5. Closes: #380443
-    - dpkg-architecture.1. CLoses: #381349
-    - initialisation of the dselect.1, dpkg-source.1, dpkg-query.1,
-      install-info.8, dpkg-deb.1, and dpkg-split.1 translations.
-      Closes: #381488
+  * German (Helge Kreutzmann).
+    Closes: #379286, #379298, #379417, #379433, #379661, #379798, #379825
+    Closes: #379985, #380130, #380239, #380365, #381047, #380660, #380443
+    Closes: #381349, #381488
   * Japanese (KISE Hiroshi).
-    Closes: 381141, #381865, #384768, #385675, #386965, #388837
-    - 822-date.1
-    - deb.5
-    - deb-old.5
-    - dpkg-checkbuilddeps.1
-    - cleanup-info.8
-    - dpkg-name.1
-    - dpkg-scanpackages.1
-    - dpkg-statoverride.8
-    - dpkg-divert.8
-    - dpkg-query.1
-    - deb-control.5
-    - dpkg-deb.1
-    - install-info.8
-    - start-stop-daemon.8
-    - dpkg.1
-    - dselect.1
-    - update-alternatives.8
-
-  [ Nicolas François ]
-  * Specify --null before the -T tar's option to avoid the "tar: -: file name
-    read contains nul character" warning.
-    Closes: #376351, #375749, #376724, #377279
+    Closes: #381141, #381865, #384768, #385675, #386965, #388837
 
  -- Christian Perrier <bubulle@debian.org>  Thu,  5 Oct 2006 22:29:12 +0200
 
@@ -313,7 +281,7 @@ dpkg (1.13.19) unstable; urgency=low
 
   [ Nicolas Francois ]
   * Generate the Russian man pages in the KOI8-R charset. Closes: #361987
-  * Document the shlibs.local format in dpkg-source(1). CLoses: #316485
+  * Document the shlibs.local format in dpkg-source(1). Closes: #316485
   * Fix a typo in an error message. Thanks to Justin Pryzby. Closes: #364539
 
   [ Guillem Jover ]
