--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -42,11 +42,10 @@
 	* po4a/add_ja/dselect.1.ja.add: Likewise.
 	* po4a/add_ja/update-alternatives.8.ja.add: Likewise.
 	* po4a/add_ja/dpkg-deb.1.ja.add: Updated.
-	* po4a/dpkg.1/dpkg.1.cfg: Specify the po4a options for the
-	Japanese translation.
+	* po4a/dpkg.1/dpkg.1.cfg: Specify the po4a options for the Japanese
+	translation.
 	* po4a/dselect.1/dselect.1.cfg: Likewise.
-	* po4a/update-alternatives.8/update-alternatives.8.cfg:
-	Likewise.
+	* po4a/update-alternatives.8/update-alternatives.8.cfg: Likewise.
 	* po4a/dpkg.1/po/ja.po: Updated translation.
 	* po4a/dselect.1/po/ja.po: Likewise.
 	* po4a/update-alternatives.8/po/ja.po: Likewise.
@@ -89,15 +88,15 @@
 	* po4a/deb.5/po/ja.po: Likewise.
 
 2006-08-17  Philippe Batailler  <philippe.batailler@free.fr>
-	
-	* po4a/dpkg-statoverride.8/po/fr.po: updated translation.
-	* po4a/dpkg-name.1/po/fr.po: likewise.
-	* po4a/update-alternatives.8/po/fr.po: likewise.
-	* po4a/start-stop-daemon.8/po/fr.po: likewise.
-	* po4a/dpkg-source.1/po/fr.po: likewise.
-	* po4a/dpkg-divert.8/po/fr.po: likewise.
-	* po4a/deb-control.5/po/fr.po: likewise.
-	* po4a/dpkg.1/po/fr.po: likewise.
+
+	* po4a/dpkg-statoverride.8/po/fr.po: Updated translation.
+	* po4a/dpkg-name.1/po/fr.po: Likewise.
+	* po4a/update-alternatives.8/po/fr.po: Likewise.
+	* po4a/start-stop-daemon.8/po/fr.po: Likewise.
+	* po4a/dpkg-source.1/po/fr.po: Likewise.
+	* po4a/dpkg-divert.8/po/fr.po: Likewise.
+	* po4a/deb-control.5/po/fr.po: Likewise.
+	* po4a/dpkg.1/po/fr.po: Likewise.
 
 2006-08-07  KISE Hiroshi  <kise@fuyuneko.jp>
 
@@ -250,7 +249,7 @@
 
 2006-07-27  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* po4a/add_de/dpkg-scanpackages.1.de.add: install the addendum
+	* po4a/add_de/dpkg-scanpackages.1.de.add: Install the addendum
 	before the SEE ALSO section, not at the end.
 	* po4a/add_de/deb-old.5.de.add: Likewise.
 	* po4a/add_de/deb.5.de.add: Likewise.
@@ -391,16 +390,16 @@
 
 2006-06-16  Robert Luberda  <robert@debian.org>
 
-	* dpkg-deb.1/po/pl.po: Update to 78t.
+	* pl/dpkg-deb.1/po/pl.po: Update to 78t.
 
 2006-06-11  Peter Karlsson  <peterk@debian.org>
 
-	* dselect.1/po/sv.po: Updated translation.
-	* dpkg-query.1/po/sv.po: Updated translation.
+	* sv/dselect.1/po/sv.po: Updated translation.
+	* sv/dpkg-query.1/po/sv.po: Updated translation.
 
 2006-06-09  Peter Karlsson  <peterk@debian.org>
 
-	* dselect.1/po/sv.po: Updated translation.
+	* sv/dselect.1/po/sv.po: Updated translation.
 
 2006-05-14  sas-guest  <sas@321.hu>
 
@@ -450,12 +449,18 @@
 
 2006-05-14  Peter Karlsson  <peterk@debian.org>
 
-	* sv/822-date.1.sv.po, sv/deb.5.sv.po, sv/deb-control.5.sv.po,
-	sv/deb-old.5.sv.po, sv/dpkg.1.sv.po, sv/dpkg.cfg.5.sv.po,
-	sv/dpkg-deb.1.sv.po, sv/dpkg-query.1.sv.po, sv/dpkg-split.1.sv.po,
-	sv/dselect.1.sv.po, sv/dselect.cfg.5.sv.po,
-	sv/start-stop-daemon.8.sv.po: Began updating the Swedish
-	translation.
+	* sv/822-date.1.sv.po: Began updating the Swedish translation.
+	* sv/deb.5.sv.po: Likewise.
+	* sv/deb-control.5.sv.po: Likewise.
+	* sv/deb-old.5.sv.po: Likewise.
+	* sv/dpkg.1.sv.po: Likewise.
+	* sv/dpkg.cfg.5.sv.po: Likewise.
+	* sv/dpkg-deb.1.sv.po: Likewise.
+	* sv/dpkg-query.1.sv.po: Likewise.
+	* sv/dpkg-split.1.sv.po: Likewise.
+	* sv/dselect.1.sv.po: Likewise.
+	* sv/dselect.cfg.5.sv.po: Likewise.
+	* sv/start-stop-daemon.8.sv.po: Likewise.
 
 2006-05-14  Philippe Batailler  <philippe.batailler@free.fr>
 
@@ -574,11 +579,11 @@
 
 2006-03-04  Christian Perrier  <bubulle@debian.org>
 
-	* dpkg-architecture.1: Typos corrections.
-	* dpkg-checkbuilddeps.1: Likewise.
-	* dpkg-name.1: Likewise.
-	* dpkg-source.1: Likewise.
-	* deb-control.5: Likewise.
+	* C/dpkg-architecture.1: Typos corrections.
+	* C/dpkg-checkbuilddeps.1: Likewise.
+	* C/dpkg-name.1: Likewise.
+	* C/dpkg-source.1: Likewise.
+	* C/deb-control.5: Likewise.
 
 2006-03-04  Philippe Batailler  <philippe.batailler@free.fr>
 
