--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -13,7 +13,7 @@
 2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
 
 	* LINGUAS: Change the Dzongkha translation maintainer to
-	norbu <nor_den@hotmail.com>
+	norbu <nor_den@hotmail.com>.
 
 2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
 
@@ -49,11 +49,11 @@
 
 2006-08-30  Miguel Figueiredo  <elmig@debianpt.org>
 
-	* pt.po: fixed extra space
+	* pt.po: Fixed extra space.
 
 2006-08-29  Bart Cornelis  <cobaco@skolelinux.no>
 	
-	* nl.po: Updated translation
+	* nl.po: Updated translation.
 
 2006-08-29  Sven Joachim  <svenjoac@gmx.de>
 
@@ -77,15 +77,15 @@
 
 2006-08-18  Jacobo Tarrio  <jtarrio@debian.org>
 
-	* gl.po: Updated to 920t
+	* gl.po: Updated to 920t.
 
 2006-08-18  Robert Millan  <rmh@aybabtu.com>
 
 	* ca.po: Fixed spelling errors.
 
-2006-08-18  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2006-08-18  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
-	* ro.po: updated to 920t
+	* ro.po: Updated to 920t.
 
 2006-08-17  Nicolas Francois  <nicolas.francois@centraliens.net>
 
@@ -103,11 +103,11 @@
 
 2006-07-28  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Wording improvements
+	* ro.po: Wording improvements.
 
 2006-07-26  Christian Perrier  <bubulle@debian.org>
 
-	* fr.po: Typo correction "ceoendant"
+	* fr.po: Typo correction "ceoendant".
 
 2006-07-11  Miguel Figueiredo  <elmig@debianpt.org>
 	    Rui Branco  <ruipb@debianpt.org>
@@ -125,7 +125,7 @@
 2006-07-01  Kinley Tshering  <gasepkuenden2k3@hotmail.com>
 
 	* dz.po: Added with 916t.
-	* LINGUAS: New language: Dzongkha
+	* LINGUAS: New language: Dzongkha.
 
 2006-06-24  Miroslav Kure  <kurem@debian.cz>
 
@@ -144,6 +144,10 @@
 	* LINGUAS: New language: Khmer.
 	* km.po: New translation: 894t22f.
 
+2006-06-23  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
+
+	* da.po: Updated to 916t.
+
 2006-06-23  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 916t.
@@ -154,15 +158,15 @@
 
 2006-06-22  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
-	* ro.po: Updated to 916t;
+	* ro.po: Updated to 916t.
 
-2006-05-27  SZERVÁC Attila  <sas@321.hu>
+2006-06-22  SZERVÁC Attila  <sas@321.hu>
 
 	* hu.po: Updated to 716t.
 
 2006-06-22  Bart Cornelis  <cobaco@skolelinux.no>
 
-	* nl.po: Updated Dutch translation
+	* nl.po: Updated translation.
 
 2006-06-21  Jacobo Tarrio  <jtarrio@debian.org>
 
