--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,6 +1,10 @@
+2006-10-06  Daniel Nylander  <info@danielnylander.se>
+
+	* sv.po: Updated to 289t.
+
 2006-10-06  SZERVÁC Attila  <sas@321.hu>
 
-	* hu.po: Updated to 200t.
+	* hu.po: Updated to 289t.
 
 2006-10-05  Peter Mann  <Peter.Mann@tuke.sk>
 
