Updated Brazilian translation of dselect

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,9 +50,10 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     (Sven is now the new German translation maintainer for dpkg and dselect).
   * Danish (Claus Hindsgaul).
   * Hungarian (SZERVÁC Attila).
-  * Spanish (Javier Fernández-Sanguino Peña).
+  * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
   * Slovak (Peter Mann).
-  * Sweidsh (Daniel Nylander).
+  * Swedish (Daniel Nylander).
+  * Brazilian Portuguese (Andre Luis Lopes).
 
   [ Updated man pages translations ]
   * French (Philippe Batailler).
