--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-06  Andre Luis Lopes  <andrelop@debian.org>
+
+	* pt_BR.po: Updated to 289t.
+
 2006-10-06  Daniel Nylander  <info@danielnylander.se>
 
 	* sv.po: Updated to 289t.
