Updated Indonesian and Japanese translations for dselect

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,8 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Hungarian (SZERVÁC Attila).
   * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
   * Slovak (Peter Mann).
+  * Indonesian (Arief S Fitrianto). Closes: #391144
+  * Japanese (Kenshi Muto).
   * Swedish (Daniel Nylander).
   * Brazilian Portuguese (Andre Luis Lopes).
 
