--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-06  Kenshi Muto  <kmuto@debian.org>
+
+	* ja.po: Updated to 289t.
+
+2006-10-06  Arief S Fitrianto  <arief@gurame.fisika.ui.ac.id>
+
+	* id.po: Updated to 289t.
+
 2006-10-06  Andre Luis Lopes  <andrelop@debian.org>
 
 	* pt_BR.po: Updated to 289t.
