Updated Danish translation for dpkg and dselect

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2006-10-06  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
+
+	* da.po: Updated to 916t3f1u.
+
 2006-10-05  SZERVÁC Attila  <sas@321.hu>
 
-	* hu.po: Updated to 748t.
+	* hu.po: Updated to 734t14f172u.
 
 2006-10-05  Khoem Sokhem  <khoemsokhem@khmeros.info>
 
