--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
   * Italian (Stefano Canepa, Davide Viti). Closes: #387821
   * Dzongkha (Tenzin Dendup). Closes: #388192
+  * Danish (Claus Hindsgaul).
 
   [ Added dpkg-dev Translations ]
   * French (Philippe Batailler).
@@ -56,6 +57,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Japanese (Kenshi Muto).
   * Swedish (Daniel Nylander).
   * Brazilian Portuguese (Andre Luis Lopes).
+  * Danish (Claus Hindsgaul).
 
   [ Updated man pages translations ]
   * French (Philippe Batailler).
