--- a/dselect/po/da.po
+++ b/dselect/po/da.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-09-02 10:23+0200\n"
+"PO-Revision-Date: 2006-10-06 16:32+0200\n"
 "Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -897,7 +897,7 @@ msgid ""
 msgstr ""
 "  --help                     Vis denne hjælpebesked.\n"
 "  --version                  Vis versionsnummer.\n"
-"  --license | --licence      Vis licensoplysninger.\n"
+"  --license | --licence      Vis licensen.\n"
 "\n"
 
 #: dselect/main.cc:190
