Partial Catalan dpkg translation update.

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Italian (Stefano Canepa, Davide Viti). Closes: #387821
   * Dzongkha (Tenzin Dendup). Closes: #388192
   * Danish (Claus Hindsgaul).
+  * Catalan (Jordi Mallach).
 
   [ Added dpkg-dev Translations ]
   * French (Philippe Batailler).
