--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-06  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: Updated to 749t74f97u.
+
 2006-10-06  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 916t3f1u.
