--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-03  Brendan O'Dea  <bod@debian.org>
+
+	* scripts/controllib.pl (subprocerr): Require POSIX for WIFEXITED,
+	WEXITSTATUS, WIFSIGNALED and WTERMSIG.
+
 2006-09-27  Guillem Jover  <guillem@debian.org>
 
 	* m4/compiler.m4: Add a new line at the end of the file, to cope with
