Sort languages alphabetically.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,43 +23,42 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Dzongkha (Kinley Tshering)
 
   [ Updated dpkg Translations ]
-  * Portuguese (Miguel Figueiredo, Rui Branco).
-  * Czech (Miroslav Kure).
-  * Dutch (Bart Cornelis).
-  * Galician (Jacobo Tarrio).
-  * Hungarian (SZERVÁC Attila).
-  * Romanian (Eddy Petrişor).
-  * French (Frédéric Bothamy).
-  * Vietnamese (Clytie Siddall). Closes: #383588
-  * Danish (Claus Hindsgaul).
-  * Khmer (Khoem Sokhem). Closes: #375099
   * Basque (Piarres Beobide). Closes: #375118
-  * Russian (Yuri Kozlov). Closes: #376746
+  * Catalan (Robert Millan, Jordi Mallach). Closes: #383448
+  * Czech (Miroslav Kure).
+  * Danish (Claus Hindsgaul).
+  * Dutch (Bart Cornelis).
+  * Dzongkha (Tenzin Dendup). Closes: #388192
+  * French (Frédéric Bothamy).
+  * Galician (Jacobo Tarrio).
   * German (Sven Joachim). Closes: #381409, #381740
-  * Catalan (Robert Millan). Closes: #383448
-  * Swedish (Daniel Nylander). Closes: #383643
+  * Hungarian (SZERVÁC Attila).
+  * Italian (Stefano Canepa, Davide Viti). Closes: #387821
   * Japanese (Kenshi Muto). Closes: #386963
+  * Khmer (Khoem Sokhem). Closes: #375099
+  * Portuguese (Miguel Figueiredo, Rui Branco).
+  * Romanian (Eddy Petrişor).
+  * Russian (Yuri Kozlov). Closes: #376746
   * Slovak (Peter Mann). Closes: #387282
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
-  * Italian (Stefano Canepa, Davide Viti). Closes: #387821
-  * Dzongkha (Tenzin Dendup). Closes: #388192
-  * Catalan (Jordi Mallach).
+  * Swedish (Daniel Nylander). Closes: #383643
+  * Vietnamese (Clytie Siddall). Closes: #383588
 
   [ Added dpkg-dev Translations ]
   * French (Philippe Batailler).
 
   [ Updated dselect Translations ]
+  * Brazilian Portuguese (Andre Luis Lopes).
   * Catalan (Robert Millan).
+  * Danish (Claus Hindsgaul).
   * German (Sven Joachim). Closes: #384843
     (Sven is now the new German translation maintainer for dpkg and dselect).
-  * Danish (Claus Hindsgaul).
   * Hungarian (SZERVÁC Attila).
-  * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
-  * Slovak (Peter Mann).
   * Indonesian (Arief S Fitrianto). Closes: #391144
   * Japanese (Kenshi Muto).
+  * Slovak (Peter Mann).
+  * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
   * Swedish (Daniel Nylander).
-  * Brazilian Portuguese (Andre Luis Lopes).
 
   [ Updated man pages translations ]
   * French (Philippe Batailler).
