Italian translation update. Will the police catche me?

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
     (Sven is now the new German translation maintainer for dpkg and dselect).
   * Hungarian (SZERVÁC Attila).
   * Indonesian (Arief S Fitrianto). Closes: #391144
+  * Italian (Stefano Canepa).
   * Japanese (Kenshi Muto).
   * Slovak (Peter Mann).
   * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
