--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-06  Stefano Canepa  <sc@linux.it>
+
+	* it.po: Updated to 289t.
+
 2006-10-06  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 289t.
