--- a/dselect/po/it.po
+++ b/dselect/po/it.po
@@ -44,7 +44,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.10.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:57+0200\n"
+"PO-Revision-Date: 2006-10-06 22:01+0200\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team: italian <debian-l10n-italian@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -899,33 +899,35 @@ msgid "menu"
 msgstr "menù"
 
 #: dselect/main.cc:150
-#, fuzzy, c-format
+#, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr "Debian `%s' interfaccia visuale alla gestione dei pacchetti."
+msgstr "Debian `%s' interfaccia per la gestione dei pacchetti versione %s.\n"
 
 #: dselect/main.cc:153
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 msgstr ""
+"Copyright (C) 1994-1996 Ian Jackson.\n"
+"Copyright (C) 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:157
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"Questo è software libero; vedi la GNU General Public Licence versione 2\n"
+"Questo è software libero; si veda la GNU General Public Licence versione 2\n"
 "o successiva per le condizioni di copia. NON c'è alcuna garanzia.\n"
-"Vedi dpkg-deb --licence per i dettagli.\n"
+"Si veda %s --license per il copyright e i dettagli della licenza.\n"
 
 #: dselect/main.cc:171
 #, c-format
 msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
-msgstr ""
+msgstr "Uso: %s [<opzione> ...] [<azione> ...]\n\n"
 
 #: dselect/main.cc:175
 #, c-format
@@ -938,6 +940,13 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
+"Opzioni:\n"
+"  --admindir <directory>     Usa <directory> invece di %s.\n"
+"  --expert                   Abilita il modo esperto.\n"
+"  --debug <file> | -D<file>  Abilita il debugging, mandando l'output a <file>.\n"
+"  --colour | --color screenpart:[foreground],[background][:attr[+attr+..]]\n"
+"                             Configura i colori dello schermo.\n"
+"\n"
 
 #: dselect/main.cc:184
 #, c-format
@@ -947,6 +956,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                     Mostra questo messaggio di aiuto.\n"
+"  --version                  Mostra la versione.\n"
+"  --license | --licence      Mostra la licenza.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -955,6 +968,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Azioni:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -1007,13 +1023,13 @@ msgid "Terminal does not appear to support highlighting.\n"
 msgstr "Il terminale non sembra in grado di gestire l'evidenziazione.\n"
 
 #: dselect/main.cc:321
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
 "Imposta correttamente la variabile TERM, utilizza un terminale migliore,\n"
-"oppure usa lo strumento di base per la gestione dei pacchetti, "
+"oppure usa lo strumento di base per la gestione dei pacchetti %s.\n"
 
 #: dselect/main.cc:324
 msgid "terminal lacks necessary features, giving up"
