--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-10-06  SZERVÁC Attila  <sas@321.hu>
+
+	* po4a/dpkg.cfg.5/po/hu.po: Updated and switch to UTF-8.
+	* po4a/dselect.cfg.5/po/hu.po: Likewise.
+	* po4a/deb-control.5/po/hu.po: Likewise.
+	* po4a/dpkg-deb.1/po/hu.po: Likewise.
+
 2006-09-30  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po4a/dpkg-scansources.1/po/de.po: Updated translation.
