The Hungarian pages have to be encoded in ISO-8859-2. As the PO are now encoded in UTF-8, the encoding of the generated man pages and of the addenda must be specified in the po4a config file.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-07  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/dpkg-deb.1/dpkg-deb.1.cfg: The PO are now in UTF-8, specify the
+	encoding of the generated manpages (and addenda) in the config file.
+	* po4a/deb-control.5/deb-control.5.cfg: Likewise.
+	* po4a/dselect.cfg.5/dselect.cfg.5.cfg: Likewise.
+	* po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Likewise.
+
 2006-10-06  SZERVÁC Attila  <sas@321.hu>
 
 	* po4a/dpkg.cfg.5/po/hu.po: Updated and switch to UTF-8.
