Add the missing French addendum. The French man page was activated in dpkg.cfg.5.cfg with the previous commit.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -5,6 +5,8 @@
 	* po4a/deb-control.5/deb-control.5.cfg: Likewise.
 	* po4a/dselect.cfg.5/dselect.cfg.5.cfg: Likewise.
 	* po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Likewise.
+	* po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Activate the French translation.
+	* po4a/add_fr/dpkg.cfg.5.fr.add: Add the missing French addendum.
 
 2006-10-06  SZERVÁC Attila  <sas@321.hu>
 
