Russian translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,7 +25,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Basque (Piarres Beobide). Closes: #375118
   * Catalan (Robert Millan, Jordi Mallach). Closes: #383448
-  * Czech (Miroslav Kure).
+  * Czech (Miroslav Kure)
   * Danish (Claus Hindsgaul).
   * Dutch (Bart Cornelis).
   * Dzongkha (Tenzin Dendup). Closes: #388192
@@ -38,7 +38,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Khmer (Khoem Sokhem). Closes: #375099
   * Portuguese (Miguel Figueiredo, Rui Branco).
   * Romanian (Eddy Petrişor).
-  * Russian (Yuri Kozlov). Closes: #376746
+  * Russian (Yuri Kozlov). Closes: #376746, #391143
   * Slovak (Peter Mann). Closes: #387282
   * Spanish (Javier Fernandez-Sanguino). Closes: #386759
   * Swedish (Daniel Nylander). Closes: #383643
@@ -57,6 +57,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Indonesian (Arief S Fitrianto). Closes: #391144
   * Italian (Stefano Canepa).
   * Japanese (Kenshi Muto).
+  * Russian (Yuri Kozlov).
   * Slovak (Peter Mann).
   * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
   * Swedish (Daniel Nylander).
