--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-07  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 920t.
+
 2006-10-06  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 920t.
