--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-08  Andre Luis Lopes  <andrelop@debian.org>
+
+	* pt_BR.po: Updated to 920t.
+
 2006-10-07  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 920t.
