Updated Norwegian Bokmål

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Slovak (Peter Mann).
   * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
   * Swedish (Daniel Nylander).
+  * Norwegian Bokmål (Hans Fr. Nordhaug)
 
   [ Updated man pages translations ]
   * French (Philippe Batailler).
