Mini police control

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,7 +60,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Japanese (Kenshi Muto).
   * Russian (Yuri Kozlov).
   * Slovak (Peter Mann).
-  * Spanish (Javier Fernández-Sanguino Peña Closes: #391144.
+  * Spanish (Javier Fernández-Sanguino Peña). Closes: #391144.
   * Swedish (Daniel Nylander).
   * Norwegian Bokmål (Hans Fr. Nordhaug)
 
