Vietnamese translation for dselect

--- a/dselect/po/vi.po
+++ b/dselect/po/vi.po
@@ -1,21 +1,21 @@
-# Vietnamese translation for Dpkg.
-# Copyright © 2005, 2006 Free Software Foundation, Inc.
+# Vietnamese translation for Dselect.
+# Copyright © 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the dpkg package.
 # Phan Vinh Thinh <teppi@vnoss.org>, 2005.
 # Clytie Siddall <clytie@riverland.net.au>, 2006.
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg\n"
+""
+msgstr "Project-Id-Version: dselect\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:58+0200\n"
+"PO-Revision-Date: 2006-10-09 20:37+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
-"Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
+"Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
-"X-Generator: LocFactoryEditor 1.6b36\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: LocFactoryEditor 1.6fc1\n"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -31,8 +31,7 @@ msgstr "Trợ giúp: "
 
 #: dselect/basecmds.cc:177
 msgid "Press ? for help menu, . for next topic, <space> to exit help."
-msgstr ""
-"Nhấn:\n"
+msgstr "Nhấn:\n"
 "\t? \t\t\t\tđể hiện trình đơn trợ giúp\n"
 "\t.\t\t\t\t(dấu chấm) để xem chủ đề tiếp theo\n"
 "\tphím dài \tđể thoát khỏi trợ giúp."
@@ -45,8 +44,7 @@ msgstr "Có sẵn thông tin trợ giúp dưới những chủ đề sau :"
 msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
-msgstr ""
-"Nhấn:\n"
+msgstr "Nhấn:\n"
 "\tmột phím từ danh sách ở trên,\n"
 "\tphím dài hoặc phím Q để thoát, hoặc\n"
 "\t.\t(dấu chấm) để đọc mỗi trang trợ giúp lần lượt. "
@@ -132,8 +130,7 @@ msgid ""
 " colheads_row=%d, thisstate_row=%d, info_row=%d;\n"
 " whatinfo_row=%d, list_row=%d;\n"
 "\n"
-msgstr ""
-"danh sách cơ bản::startdisplay() (sở khởi bộ trình bày) đã xong ...\n"
+msgstr "danh sách cơ bản::startdisplay() (sở khởi bộ trình bày) đã xong ...\n"
 "\n"
 " x_tối_đa=%d, y_đối_đa=%d;\n"
 "\n"
@@ -334,8 +331,7 @@ msgid ""
 "   U     set all to sUggested state             /   search (Return to "
 "cancel)\n"
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
-msgstr ""
-"Phím di chuyển:\n"
+msgstr "Phím di chuyển:\n"
 "\tKế/Trước, Đầu/Cuối, Lên/Xuống, Lùi/Tiếp:\n"
 "  Mũi tên xuống, J         Mũi tên lên, K             di chuyển chiếu sáng\n"
 "  N, Page-down, Phím dài   \t\t\tP, Page-up, Backspace (Xóa lùi)\n"
@@ -406,8 +402,7 @@ msgid ""
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
 "Press <space> to leave help and enter the list now.\n"
-msgstr ""
-"Xin chào mừng tới danh sách quản lý gói chính của dselect.\n"
+msgstr "Xin chào mừng tới danh sách quản lý gói chính của dselect.\n"
 "\n"
 "Đây là danh sách những gói đã cài đặt hoặc sẵn sàng để cài đặt.\n"
 "Có thể di chuyển quanh danh sách bằng các phím mũi tên,\n"
@@ -454,8 +449,7 @@ msgid ""
 "When you have finished browsing, press `Q' or <enter> to quit.\n"
 "\n"
 "Press <space> to leave help and enter the list now.\n"
-msgstr ""
-"Xin chào mừng tới danh sách quản lý gói chính của dselect.\n"
+msgstr "Xin chào mừng tới danh sách quản lý gói chính của dselect.\n"
 "\n"
 "Đây là danh sách những gói đã cài đặt hoặc sẵn sàng để cài đặt.\n"
 "Vì bạn không có đủ quyền cần thiết để cập nhật tính trạng các gói,\n"
@@ -508,8 +502,7 @@ msgid ""
 "\n"
 "Press <space> to leave help and enter the sub-list; remember: press `?' for "
 "help.\n"
-msgstr ""
-"Giải quyết phụ thuộc/xung đột — giới thiệu.\n"
+msgstr "Giải quyết phụ thuộc/xung đột — giới thiệu.\n"
 "\n"
 "Một hoặc vài lựa chọn đã gây ra vấn đề xung đột hay phụ thuộc —\n"
 "một số gói nào đó chỉ cài đặt được cùng với một số gói khác, còn một số tổ "
@@ -570,8 +563,7 @@ msgid ""
 "Also displayed are each package's Priority, Section, name, installed and\n"
 "available version numbers (shift-V to display/hide) and summary "
 "description.\n"
-msgstr ""
-"Nửa trên của màn hình hiển thị danh sách các gói.\n"
+msgstr "Nửa trên của màn hình hiển thị danh sách các gói.\n"
 "Mỗi gói có bốn cột hiển thị trạng thái hiện thời trên hệ thống và đánh dấu.\n"
 "Trong chế độ ngắn gọn (dùng « v » để chuyển sang chế độ chi tiết)\n"
 "chúng là những ký tự đơn, từ trái sang phải:\n"
@@ -626,8 +618,7 @@ msgid ""
 "\n"
 "  Use the `i' key to cycle through the displays, and `I' to hide the\n"
 "  information display or expand it to use almost all of the screen.\n"
-msgstr ""
-"* Chiếu sáng: Sẽ chiếu sáng một dòng trong danh sách gói.  Chiếu sáng\n"
+msgstr "* Chiếu sáng: Sẽ chiếu sáng một dòng trong danh sách gói.  Chiếu sáng\n"
 "  chỉ ra gói nào sẽ bị ảnh hưởng khi nhấn phím « + », « - » và « _ ».\n"
 "\n"
 "• Dòng chia ở giữa màn hình cho biết giải thích ngắn gọn về trạng thái của\n"
@@ -672,8 +663,7 @@ msgid ""
 "A full list of keystrokes is available by pressing `k' now, or from the "
 "help\n"
 "menu reachable by pressing `?'.\n"
-msgstr ""
-"dselect và dpkg có thể cài đặt tự động, tải tập tin của gói cần cài đặt\n"
+msgstr "dselect và dpkg có thể cài đặt tự động, tải tập tin của gói cần cài đặt\n"
 "từ một trong số những nơi có thể dùng.\n"
 "\n"
 "Danh sách này cho phép chọn một trong số những phương pháp cài đặt này.\n"
@@ -717,8 +707,7 @@ msgid ""
 " ^l                redraw display\n"
 "  /                search (just return to cancel)\n"
 "  \\                repeat last search\n"
-msgstr ""
-"Phím di chuyển: Kế/Trước, Đầu/Cuối, Lên/Xuống, Lùi/Tiếp:\n"
+msgstr "Phím di chuyển: Kế/Trước, Đầu/Cuối, Lên/Xuống, Lùi/Tiếp:\n"
 "  n, Mũi tên xuống         p, Mũi tên lên             di chuyển chiếu sáng\n"
 "  N, Page-down, Phím dài   P, Page-up, Xóa lùi   cuộn 1 trang danh sách\n"
 "  ^n                    ^p                      cuộn 1 dòng danh sách\n"
@@ -842,8 +831,7 @@ msgstr "Tiền tiêu quản lý gói Debian « %s » phiên bản %s.\n"
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
-msgstr ""
-"Bản quyền © nam 1994-1996 Ian Jackson.\n"
+msgstr "Bản quyền © nam 1994-1996 Ian Jackson.\n"
 "Bản quyền © năm 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:157
@@ -852,8 +840,7 @@ msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
-msgstr ""
-"Đây là phần mềm tự do, hãy xem Quyền Công Chung GNU (GPL)\n"
+msgstr "Đây là phần mềm tự do, hãy xem Quyền Công Chung GNU (GPL)\n"
 "phiên bản 2 hoặc mới hơn để biết điều kiện sao chép.\n"
 "KHÔNG có bản đảm gì cả.\n"
 "Hãy xem « %s --licence » để biết điều kiện _quyền phép_.\n"
@@ -863,10 +850,11 @@ msgstr ""
 msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
-msgstr ""
+msgstr "Cách sử dụng: %s [<tùy_chọn> ...] [<hành_động> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -875,30 +863,14 @@ msgid ""
 "  --colour | --color screenpart:[foreground],[background][:attr[+attr+..]]\n"
 "                             Configure screen colours.\n"
 "\n"
-msgstr ""
-"Cách sử dụng: %s [<tùy_chọn> ...] [<hành_động> ...]\n"
-"\n"
-"Tùy chọn:\n"
-"  --admindir <thư_mục>\n"
-"\t\t\t\t\tĐặt <thư_mục> là _thư mục quản trị_ thay vào %s.\n"
+msgstr "Tùy chọn:\n"
+"  --admindir <thư_mục>	dùng thư mục này thay cho %s.\n"
+"	[_thư mục quản trị_]\n"
 "  --expert                   \tBật chế độ _cấp cao_.\n"
 "  --debug <tập_tin> | -D<tập_tin>\n"
-"\t\t\t\t\tBật khả năng _gỡ lỗi_, xuất vào <tập_tin>.\n"
-"  --colour | --color screenpart:[cảnh_gần],[nền][:thuộc_tính[+thuộc_tính"
-"+..]]\n"
-"                             \t\tCấu hình _màu_ sắc trên màn hình.\n"
-"  --help                     \tHiển thị _trợ giúp_ này\n"
-"  --version                  \tHiển thị số thứ tự _phiên bản_.\n"
-"  --license                  \tHiển thị _quyền phép_.\n"
-"\n"
-"Hành động:\n"
-"  \taccess\t\ttruy cập\n"
-"\tupdate\t\tcập nhật\n"
-"\tselect \t\tlựa chọn\n"
-"\tinstall \t\tcài đặt\n"
-"\tconfig \t\tcấu hình (viết tắt)\n"
-"\tremove \t\tgỡ bỏ\n"
-"\tquit\t\t\tthoát\n"
+"\t\t\t\t\tBật khả năng _gỡ lỗi_, xuất vào tập tin này.\n"
+"  --colour | --color screenpart:[cảnh_gần],[nền][:TT[+TT+..]]\n"
+"	[TT là thuộc tính]	cấu hình màu sắc màn hình\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -908,7 +880,10 @@ msgid ""
 "  --version                  Show the version.\n"
 "  --license | --licence      Show the license.\n"
 "\n"
-msgstr ""
+msgstr "  --help                     Hiện _trợ giúp_ này.\n"
+"  --version                  Hiện _phiên bản_.\n"
+"  --license | --licence      Hiện _giấy phép_.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -916,7 +891,14 @@ msgid ""
 "Actions:\n"
 "  access update select install config remove quit\n"
 "\n"
-msgstr ""
+msgstr "Hành động:\n"
+" • access		truy cập\n"
+" • update		cập nhật\n"
+" • select		lựa chọn\n"
+" • install		cài đặt\n"
+" • config		cấu hình (viết tắt)\n"
+" • remove	gỡ bỏ\n"
+" • quit		thoát\n"
 
 #: dselect/main.cc:194
 #, c-format
@@ -951,7 +933,8 @@ msgstr "phần màn hình"
 msgid "Null colour specification\n"
 msgstr "Đặc tả màu rỗng\n"
 
-#: dselect/main.cc:270 dselect/main.cc:275
+#: dselect/main.cc:270
+#: dselect/main.cc:275
 msgid "colour"
 msgstr "màu"
 
@@ -972,8 +955,7 @@ msgstr "Thiết bị cuỗi có vẻ không hỗ trợ chiếu sáng.\n"
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
-msgstr ""
-"Hãy đặt đúng giá trị biến TERM, dùng một thiết bị cuối tốt hơn,\n"
+msgstr "Hãy đặt đúng giá trị biến TERM, dùng một thiết bị cuối tốt hơn,\n"
 "hoặc làm việc với công cụ quản lý theo từng gói %s.\n"
 
 #: dselect/main.cc:324
@@ -987,8 +969,7 @@ msgid ""
 "Move around with ^P and ^N, cursor keys, initial letters, or digits;\n"
 "Press <enter> to confirm selection.   ^L redraws screen.\n"
 "\n"
-msgstr ""
-"\n"
+msgstr "\n"
 "\n"
 "Di chuyển bằng ^P và ^N, phím mũi tên, chữ cái đầu, hoặc chữ số;\n"
 "Nhấn phím Enter để chọn.   ^L vẽ lại màn hình.\n"
@@ -999,8 +980,7 @@ msgid ""
 "\n"
 "\n"
 "Read-only access: only preview of selections is available!"
-msgstr ""
-"\n"
+msgstr "\n"
 "\n"
 "Truy cập chỉ đọc: chỉ có sẵn xem trước các lựa chọn."
 
@@ -1026,7 +1006,8 @@ msgstr "Phương pháp truy cập « %s »"
 msgid "Abbrev."
 msgstr "Viết tắt"
 
-#: dselect/methlist.cc:122 dselect/pkgtop.cc:297
+#: dselect/methlist.cc:122
+#: dselect/pkgtop.cc:297
 msgid "Description"
 msgstr "Mô tả"
 
@@ -1046,13 +1027,14 @@ msgstr "việc ngăn chặn lại SIGWINCH bị lỗi"
 msgid "getch failed"
 msgstr "việc getch (đọc từng ký tự khi gõ) bị lỗi"
 
-#: dselect/methlist.cc:177 dselect/pkgdepcon.cc:242
+#: dselect/methlist.cc:177
+#: dselect/pkgdepcon.cc:242
 msgid "[none]"
 msgstr "[không có]"
 
 #: dselect/methlist.cc:191
 msgid "explanation of "
-msgstr "giải thích về"
+msgstr "giải thích về "
 
 #: dselect/methlist.cc:201
 msgid "No explanation available."
@@ -1064,8 +1046,7 @@ msgid ""
 "\n"
 "\n"
 "%s: %s\n"
-msgstr ""
-"\n"
+msgstr "\n"
 "\n"
 "%s: %s\n"
 
@@ -1073,8 +1054,7 @@ msgstr ""
 msgid ""
 "\n"
 "Press <enter> to continue."
-msgstr ""
-"\n"
+msgstr "\n"
 "Nhấn phím Enter để tiếp tục lại."
 
 #: dselect/method.cc:144
@@ -1436,7 +1416,8 @@ msgstr "lỗi"
 msgid "?"
 msgstr "?"
 
-#: dselect/pkgdisplay.cc:97 dselect/pkgdisplay.cc:117
+#: dselect/pkgdisplay.cc:97
+#: dselect/pkgdisplay.cc:117
 msgid "Broken"
 msgstr "Bị vỡ"
 
@@ -1460,11 +1441,13 @@ msgstr "Hiện thời"
 msgid "Available"
 msgstr "Có sẵn"
 
-#: dselect/pkgdisplay.cc:103 dselect/pkgdisplay.cc:119
+#: dselect/pkgdisplay.cc:103
+#: dselect/pkgdisplay.cc:119
 msgid "Removed"
 msgstr "Đã gỡ bỏ"
 
-#: dselect/pkgdisplay.cc:104 dselect/pkgdisplay.cc:113
+#: dselect/pkgdisplay.cc:104
+#: dselect/pkgdisplay.cc:113
 msgid "Brokenly installed packages"
 msgstr "Gói đã cài nhưng bị vỡ"
 
@@ -1548,7 +1531,8 @@ msgstr " (sẵn, ưu tiên)"
 msgid " (status, priority)"
 msgstr " (trạng thái, ưu tiên)"
 
-#: dselect/pkgdisplay.cc:240 dselect/pkgdisplay.cc:252
+#: dselect/pkgdisplay.cc:240
+#: dselect/pkgdisplay.cc:252
 msgid " (alphabetically)"
 msgstr " (theo bảng chữ cái)"
 
@@ -1586,8 +1570,7 @@ msgid ""
 "information about that package displayed here.\n"
 "You can use `o' and `O' to change the sort order and give yourself the "
 "opportunity to mark packages in different kinds of groups."
-msgstr ""
-"Dòng vừa chiếu sáng có nhiều gói; hành động cài đặt, gỡ bỏ, giữ lại, v.v... "
+msgstr "Dòng vừa chiếu sáng có nhiều gói; hành động cài đặt, gỡ bỏ, giữ lại, v.v... "
 "sẽ ảnh hưởng đến mọi gói tương ứng với tiêu chuẩn chỉ ra.\n"
 "\n"
 "Nếu di chuyển chiếu sáng tới một dòng của một gói nào đó, thì sẽ thấy thông "
@@ -1631,7 +1614,8 @@ msgstr "phiên bản có sẵn của thông tin tập tin điều khiển"
 msgid "available version of control info for "
 msgstr "phiên bản có sẵn của thông tin điều khiển cho "
 
-#: dselect/pkglist.cc:123 dselect/pkglist.cc:124
+#: dselect/pkglist.cc:123
+#: dselect/pkglist.cc:124
 msgid "<null>"
 msgstr "<rỗng>"
 
