--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-09  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 289t.
+
 2006-10-09  Hans Fr. Nordhaug  <hans@nordhaug.priv.no>
 
 	* nb.po: Updated to 289t.
