[l10n] Updated Catalan dselect translation.

--- a/dselect/po/ca.po
+++ b/dselect/po/ca.po
@@ -1,4 +1,4 @@
-# Catalan translation of Dpkg.
+# Catalan translation of Dselect.
 # Copyright © 2001, 2002, 2003, 2004, 2005, 2006 Software in the Public Interest, Inc.
 # Antoni Bella <bella5@teleline.es>, 2001, 2002.
 # Jordi Mallach <jordi@debian.org>, 2002, 2003, 2004, 2005, 2006.
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:55+0200\n"
+"PO-Revision-Date: 2006-10-11 14:25+0200\n"
 "Last-Translator: Jordi Mallach <jordi@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -874,10 +874,10 @@ msgstr ""
 msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
-msgstr ""
+msgstr "Forma d'ús: %s [<opció> ...] [<acció> ...]\n\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -887,8 +887,6 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Forma d'ús: %s [<opció> ...] [<acció> ...]\n"
-"\n"
 "Opcions:\n"
 "  --admindir <directori>        Utilitza <directori> en comptes de %s.\n"
 "  -expert                       Habilita el mode expert.\n"
@@ -896,12 +894,6 @@ msgstr ""
 "                                a <fitxer>.\n"
 "  --colour | --color screenpart:[foreground],[background][:attr[+attr+..]]\n"
 "                                Configura els colors de la pantalla.\n"
-"  --help                        Mostra aquest missatge d'ajuda.\n"
-"  --version                     Mostra la versió.\n"
-"  --lincense                    Mostra la llicència.\n"
-"\n"
-"Accions:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -912,6 +904,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                        Mostra aquest missatge d'ajuda.\n"
+"  --version                     Mostra la versió.\n"
+"  --license | --licence         Mostra la llicència.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -920,6 +916,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Accions:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
