[l10n] Added Catalan dpkg-dev translation.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-11  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: New Catalan translation (24t406u).
+
 2006-07-08  Philippe Batailler  <philippe.batailler@free.fr>
 
 	* fr.po: Typos fixed.
