--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-11  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* LINGUAS: Activate the Catalan translation.
+
 2006-10-11  Jordi Mallach  <jordi@debian.org>
 
 	* ca.po: New Catalan translation (24t406u).
