--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.23~) UNRELEASED; urgency=low
+dpkg (1.13.23) unstable; urgency=low
 
   [ Guillem Jover ]
   * Add initial support for the Breaks field, by parsing but rejecting it.
@@ -75,7 +75,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * Japanese (KISE Hiroshi).
     Closes: #381141, #381865, #384768, #385675, #386965, #388837
 
- -- Christian Perrier <bubulle@debian.org>  Thu,  5 Oct 2006 22:29:12 +0200
+ -- Guillem Jover <guillem@debian.org>  Thu, 12 Oct 2006 02:56:09 +0300
 
 dpkg (1.13.22) unstable; urgency=low
 
