--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-12  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.13.23.
+
 2006-10-06  Guillem Jover  <guillem@debian.org>
 
 	* README.translators: Add references to the new scripts/po/ChangeLog
