--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-12  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.13.24~.
+
+2006-10-12  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.13.23.
 
 2006-10-06  Guillem Jover  <guillem@debian.org>
