--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.24~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Thu, 12 Oct 2006 03:15:23 +0300
+
 dpkg (1.13.23) unstable; urgency=low
 
   [ Guillem Jover ]
