--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-12  Shiva Prasad Pokharel  <pokharelshiva@hotmail.com>
+
+	* ne.po: Updated to 919t1f.
+
 2006-10-08  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 920t.
